@@ -1523,7 +1523,7 @@ void QtCalculator::configclicked(){
   tabdialog = new QTabDialog(0,"tabdialog",TRUE);
 
   tabdialog->setCaption( i18n("KCalc Configuraton") );
-  tabdialog->resize( 350, 350 );
+  tabdialog->resize( 360, 390 );
   tabdialog->setCancelButton( i18n("Cancel") );
 
   QWidget *about = new QWidget(tabdialog,"about");
